# AI-Analyst-for-Startup-Evaluation

./: .gitignore  .slugignore  Aptfile  Day 8 – Conversational Assistant + Smart.txt  MANIFEST.in  Procfile  README.md  app.json  heroku.yml  requirements-heroku.txt  requirements-prod.txt  requirements.txt  setup.cfg  setup.py  setup.sh  startup.sh  test_agents.py
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  Gen Ai.postman_collection.json  README.md  requirements.txt  test_config.py
backend/app/: config.py  db.py  logging_config.py  main.py
backend/app/api/: dependencies.py
backend/app/db/: __init__.py  mongodb.py
backend/app/middleware/: __init__.py  (+1 more)
backend/examples/: adk_agent_example.py
backend/logs/: README.md
backend/tests/: test_agent_context.py
client/: metadata.json  package-lock.json  tailwind.config.js  vercel.json  vite.config.ts
client/src/: App.tsx
frontend/: .env.example  App.tsx  App.tsx.new  README.md  constants.ts  index.html  metadata.json  next.config.js  package-lock.json  package.json  tsconfig.json  types.ts
frontend/components/: AnalysisDashboard.tsx  DealInput.tsx  Header.tsx  LoadingSpinner.tsx
frontend/hooks/: useVerdict.ts
frontend/pages/: finance.tsx
frontend/services/: finance.ts  geminiService.ts
frontend/src/: App.tsx  index.css
frontend/types/: analysis.ts
server/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt  test_config.py
server/app/: db.py  models.py
server/docs/: agent_context_service.md
server/scripts/: test_agent_context.py  test_analysis.py
(+155 files in other folders)
