[metadata]
description-file = README.md
license_file = LICENSE

[install]
# Use the legacy resolver to handle dependency conflicts better
no-binary = :all:

[easy_install]
# Allow pre-releases and development versions
allow_hosts = *
find_links = https://pypi.org/simple/

[options]
package_dir =
    = backend
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.10,<3.11

[options.packages.find]
where = backend
exclude = 
    tests*
    docs*
    examples*
    scripts*
    *test*

[egg_info]
tag_build = 
tag_date = 0

global-options =
    --no-binary=:all:
